# leviathan-auction-monitor

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
bot/: __init__.py  api.py  bot.py  config.py  db.py  logger.py  tg.py
docs/superpowers/plans/: 2026-03-14-auction-monitor-improvements.md
docs/superpowers/specs/: 2026-03-14-auction-monitor-improvements-design.md
tests/: test_db.py
